Linting clean-up